--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "dot": "^1.1.3",
+    "dotenv": "^17.2.3",
+    "env": "^0.0.2",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3"
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
